--- a/style/style.css
+++ b/style/style.css
@@ -15,10 +15,15 @@
   font-style: normal;
 }
 
+body{
+     background-color: rgb(245,248,255);
+}
+
 /*HEADER*/
 header{
     background-image: url(../Assets/Hero-bg.png);
     height: 600px;  
+   
 }
 .nav{
     display: flex;
@@ -47,11 +52,16 @@ header{
 main{
     width: 1140px;
     margin: 0 auto;
+   
+}
+
+/*SECTION*/
+section{
+    margin-top: 116px;
 }
 
 /*ACTION*/
 .action{
-    margin-top:116px ;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,6 +70,86 @@ main{
 .action img{
     border-radius: 15px;
 }
+
+.action p{
+    font-size: 20px;
+}
+
+/*USER SECTION*/
+.users{
+    background-color: rgba(78, 71, 255, 0.1);
+    border-radius: 25px;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.users h3{
+    font-size: 38px;
+    font-weight: bold;
+
+}
+
+
+.data h1{
+    font-size:80px ;
+    font-weight: bold;
+    margin: 0;
+    color:  rgba(78, 71, 255, 1);;
+    
+    
+
+}
+
+.datas{
+    display: flex;
+    justify-content: space-around;
+    
+    
+}
+
+
+/*USERFEEDBACK SECTION*/
+.userfeedback h2{
+    text-align: center;
+    font-size: 42px;
+    font-weight: bold;
+}
+.reviews{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.review{
+    width: 300px;
+    height: 190px;
+    padding: 24px;
+    background-color: white;
+    border: 1px solid rgb(231, 226, 226);
+    border-radius: 15px ;
+}
+
+.star{
+    margin-bottom: 24px;
+}
+
+.review p{
+    margin-bottom: 5px;
+}
+
+.reviewer{
+    display: flex;
+    align-items: center;
+    margin-top: 0px;
+    gap: 20px;
+}
+
+.reviewer img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
 
 /*SHARED RESOURCES*/
 button{
@@ -80,6 +170,6 @@ button{
 .section-subheading{
     margin-top: 10px;
     color:rgba(37, 36, 50, 0.5) ;
-    font-size: 20px;
+    
 
 }
