--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,6 @@
 .raleway-font {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
-  font-weight: normal;
   font-style: normal;
 }
 
@@ -11,7 +10,7 @@
 .inter-font {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: normal;
+
   font-style: normal;
 }
 
@@ -109,55 +108,119 @@ section{
 
 
 /*USERFEEDBACK SECTION*/
-.userfeedback h2{
+
+.userfeedback {
+    margin-bottom: 137px;
+}
+
+.userfeedback h2 {
     text-align: center;
     font-size: 42px;
     font-weight: bold;
 }
-.reviews{
+
+.reviews {
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
+    flex-wrap: wrap;
+    gap: 30px; 
 }
 
-.review{
-    width: 300px;
-    height: 190px;
-    padding: 24px;
+.review {
     background-color: white;
-    border: 1px solid rgb(231, 226, 226);
-    border-radius: 15px ;
+    padding: 25px;
+    border-radius: 15px;
+    width: 310px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
 }
 
-.star{
+.star {
     margin-bottom: 24px;
 }
 
-.review p{
-    margin-bottom: 5px;
+.reviews h3 {
+    margin-bottom: 8px;
+    font-weight: 600;
 }
 
-.reviewer{
+.review-text {
+    margin-bottom: 18px;
+    line-height: 1.5;
+}
+
+.reviewer {
     display: flex;
     align-items: center;
-    margin-top: 0px;
     gap: 20px;
 }
 
-.reviewer img{
-    height: 40px;
+.reviewer img {
     width: 40px;
+    height: 40px;
     border-radius: 50%;
+    object-fit: cover;
 }
+
+.name {
+    color: rgb(99, 93, 93);
+    font-weight: 600;
+    margin: 0;
+}
+
+.date {
+    color: rgb(179, 179, 179);
+    margin: 0;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+/*FOCUS BETTER*/
+.focus-better{
+    background-color: white;
+    text-align: center;
+    padding-top: 70px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 700px;
+    border-radius: 15px;
+
+}
+.focus-better h2{
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.focus-better img{
+    margin-top: 20px;
+    border-radius: 48px;
+
+}
+
+
+
+
+
+
+
+
+
 
 
 /*SHARED RESOURCES*/
 button{
+    padding: 12px 36px;
+    border-radius: 10px;
+    border: none;
     color: white;
     background-color: rgba(78, 71, 255, 1);
-    border: none;
-    padding:  12px 36px;
-    border-radius: 10px;
+    font-size: 16px ;
+    font-weight: bold;
 }
 
 .section-heading{
@@ -168,8 +231,7 @@ button{
 }
 
 .section-subheading{
-    margin-top: 10px;
-    color:rgba(37, 36, 50, 0.5) ;
+      color:rgba(37, 36, 50, 0.5) ;
     
 
 }
